# StoneImageCompress-Demo

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/github/com/stoneimagecompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: compressImage.cpp  github_com_stoneimagecompress_util_ImageUtil.h
app/src/main/java/github/com/stoneimagecompress/: CaptureImageHelper.java  ImageSelectActivity.java  ImageSelectorHelper.java  MainActivity.java  OnItemSelectedChangedListener.java  SelectImageListAdapter.java
app/src/main/java/github/com/stoneimagecompress/commonAdapter/: RecyclerCommonAdapter.java  ViewHolder.java
app/src/main/java/github/com/stoneimagecompress/commonAdapter/helper/: DragItemTouchHelper.java  GlideImageLoadHelper.java  ImageLoadHelper.java  MulitiTypeSupport.java  (+2 more)
app/src/main/java/github/com/stoneimagecompress/itemdecoration/: GridLayoutItemDecoration.java  LinearLayoutItemDecoration.java
app/src/main/java/github/com/stoneimagecompress/util/: ImageUtil.java  ThreadPoolManager.java
app/src/main/java/github/com/stoneimagecompress/view/: SquareFrameLayout.java  SquareImageView.java
app/src/main/res/color/: media_choose_op_btn_text.xml
app/src/main/res/drawable/: linearlayout_item.xml  media_chooser_ic.xml
app/src/main/res/layout/: activity_image_select.xml  activity_main.xml  media_chooser_item.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/github/com/stoneimagecompress/: ExampleUnitTest.java
